--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.2.0",
+    "coinspot-api": "^0.1.20",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.0.2",
     "elliptic": "^6.5.4",
     "express": "^4.18.1",
